Correccion de rutas 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/images/Fondo General 1.png");
+  background-image: url("../images/FondoGeneral1.png");
   background-repeat: repeat;
   background-size: contain; }
 
