--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@ body {
 .header {
   border-bottom: 3px solid lightgray;
   overflow: hidden;
-  height: 75px;
-  background-color: rgba(0, 0, 0, 0.418); }
+  background-color: #686868; }
   .header .logo {
     width: 90px; }
   .header .nav__detail {
@@ -65,7 +64,8 @@ body {
         text-align: center;
         transition: transform 0.8s;
         transform-style: preserve-3d; }
-        .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-front, .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back {
+        .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-front,
+        .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back {
           position: absolute;
           width: 100%;
           height: 100%;
@@ -79,7 +79,7 @@ body {
             width: 315px;
             height: 415px; }
         .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back {
-          background-color: #bbb;
+          background-color: #A27573;
           color: white;
           transform: rotateY(180deg);
           border-radius: 10px;
@@ -92,6 +92,11 @@ body {
           .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back p {
             width: 80%;
             text-align: center; }
+          .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back img {
+            width: 70px; }
+          .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back a .ig__nosotros {
+            width: 45px;
+            margin-top: 15px; }
       .nosotros__container .nosotros__cards .flip-card:hover .flip-card-inner {
         transform: rotateY(180deg); }
 
@@ -102,26 +107,34 @@ body {
   .episodios__container h2 {
     font-size: 70px;
     color: white;
-    margin-left: 70px; }
-  .episodios__container .carousel {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px; }
-    .episodios__container .carousel .carousel-inner {
-      width: 80%; }
-  .episodios__container .card-wrapper {
-    display: flex;
-    justify-content: space-around; }
-    .episodios__container .card-wrapper a {
+    margin-left: 70px;
+    margin-bottom: 30px; }
+  .episodios__container .container__epi__cards {
+    height: 425px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 30%;
+    overflow-x: auto; }
+    .episodios__container .container__epi__cards::-webkit-scrollbar {
+      width: 100%;
+      height: 10px; }
+    .episodios__container .container__epi__cards::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      border-radius: 10px; }
+    .episodios__container .container__epi__cards::-webkit-scrollbar-thumb {
+      background: rgba(0, 0, 0, 0.175);
+      border-radius: 10px; }
+    .episodios__container .container__epi__cards a {
       text-decoration: none; }
-      .episodios__container .card-wrapper a .card {
-        background-color: #bbb;
+      .episodios__container .container__epi__cards a .card {
+        background-color: #A27573;
         width: 18rem;
-        transition: 0.5s; }
-        .episodios__container .card-wrapper a .card .card-body {
+        transition: 0.5s;
+        min-width: 286px; }
+        .episodios__container .container__epi__cards a .card .card-body {
           color: white;
           text-decoration: none; }
-        .episodios__container .card-wrapper a .card:hover {
+        .episodios__container .container__epi__cards a .card:hover {
           width: 300px;
           height: 395px; }
 
@@ -149,7 +162,7 @@ body {
       border-radius: 10px; }
     .resenas-container .container__res__card .card__resenas {
       height: 480px;
-      background-color: #bbb;
+      background-color: #A27573;
       border: 1px solid rgba(0, 0, 0, 0.175);
       border-radius: 7px;
       display: flex;
@@ -180,7 +193,7 @@ body {
         .resenas-container .container__res__card .card__resenas .card_body button {
           width: 130px;
           height: 36px;
-          background-color: #B59190;
+          background-color: #585858;
           color: white;
           border-radius: 15px;
           border: none; }
@@ -188,6 +201,8 @@ body {
 .modal-dialog {
   max-width: none;
   width: 1000px; }
+  .modal-dialog .modal-content {
+    background-color: #A27573; }
   .modal-dialog .modal-title {
     font-size: 25px; }
   .modal-dialog .modal-body {
@@ -231,9 +246,92 @@ body {
   height: 100px;
   margin-top: 40px;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  z-index: -1000; }
   .footer .rrss {
     width: 400px;
     display: flex;
     justify-content: space-around;
     margin-top: 30px; }
+    .footer .rrss a img {
+      width: 40px; }
+
+@media screen and (max-width: 481px) {
+  body {
+    background-image: url("../images/FondoGeneral1.png");
+    background-repeat: repeat;
+    background-size: cover; }
+  .home__container {
+    width: 90%;
+    justify-content: center;
+    margin-top: 30px; }
+    .home__container .home__info {
+      margin-top: 10px;
+      width: 169px; }
+      .home__container .home__info h1 {
+        font-size: 30px; }
+      .home__container .home__info p {
+        font-size: 11px; }
+    .home__container img {
+      width: 164px;
+      height: 164px;
+      margin-left: 10px; }
+  .nosotros__container .nosotros__title h2 {
+    font-size: 32px;
+    margin-left: 0px; }
+  .nosotros__container .nosotros__cards {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px; }
+    .nosotros__container .nosotros__cards .flip-card {
+      width: 200px;
+      height: 250px;
+      margin-bottom: 15px; }
+      .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-front img {
+        width: 200px;
+        height: 250px; }
+      .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back h2 {
+        font-size: 15px; }
+      .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back p {
+        font-size: 11px; }
+      .nosotros__container .nosotros__cards .flip-card .flip-card-inner .flip-card-back img {
+        width: 50px; }
+  .episodios__container {
+    margin-top: 30px; }
+    .episodios__container h2 {
+      font-size: 32px;
+      margin-left: 30px; }
+    .episodios__container .container__epi__cards {
+      grid-auto-columns: 100%; }
+    .episodios__container .card {
+      width: 90px !important; }
+      .episodios__container .card .card-body h5 {
+        font-size: 11px; }
+        .episodios__container .card .card-body h5 p {
+          font-size: 10; }
+  .resenas-container {
+    margin-top: 30px; }
+    .resenas-container h2 {
+      font-size: 32px;
+      margin-left: 30px; }
+    .resenas-container .container__res__card {
+      grid-auto-columns: 100%; }
+  .escribinos__container h2 {
+    font-size: 32px;
+    margin-left: 30px; }
+  .escribinos__container .escribinos__detail {
+    flex-direction: column; }
+    .escribinos__container .escribinos__detail img {
+      width: 90%;
+      height: 200px; }
+    .escribinos__container .escribinos__detail .details__text {
+      margin-top: 15px;
+      display: flex;
+      flex-direction: column; }
+      .escribinos__container .escribinos__detail .details__text p {
+        font-size: 14px; }
+      .escribinos__container .escribinos__detail .details__text a {
+        text-align: end; }
+        .escribinos__container .escribinos__detail .details__text a button {
+          width: 125px;
+          height: 40px; } }
